--- a/weather-scope/src/app/pages/about-us/about-us.component.html
+++ b/weather-scope/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,35 @@
-<p>about-us works!</p>
+<!-- <div class="col-1">this is 8.33%</div>
+<div class="col-2">this is 16.66%</div> -->
+<div class="col-3">this is 25%</div>
+<!-- <div class="col-4">this is 33.33%</div>
+<div class="col-5">this is 41.66%</div>
+<div class="col-6">this is 50%</div>
+<div class="col-7">this is 58.33%</div>
+<div class="col-8">this is 66.66%</div> -->
+<div class="col-9">this is 75%</div>
+<!-- <div class="col-10">this is 83.33%</div>
+<div class="col-11">this is 91.66%</div>
+<div class="col-12">this is 100%</div> -->
+<!-- <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <img
+        mat-card-image
+        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+        alt="Photo of a Shiba Inu"
+      />
+      <mat-card-content>
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card> -->
