--- a/weather-scope/src/app/app.component.html
+++ b/weather-scope/src/app/app.component.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <div class="page-container">
   <header>
     <div>
@@ -19,7 +20,7 @@
     >
       <app-side-bar></app-side-bar>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content class="main">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
